src/main/kotlin/com/example/sales_crud/error/exception/NotFoundException.kt
package com.example.sales_crud.error.exception

class NotFoundException(message: String) : RuntimeException(message)